=== Safari-100 ===

=== Safari-99 ===

=== Safari-98 ===

=== Safari-97 ===

=== Safari-96 ===

2003-08-27  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by John

	- fixed rdar://problem/3397316 - sherlock crash: KJS::Collector::allocate(unsigned long)
	
	* kjs/internal.cpp:
        (InterpreterImp::InterpreterImp): Hold the lock a bit longer, so
	the call to initGlobalObject is covered.

=== Safari-95 ===

2003-08-24  Darin Adler  <darin@apple.com>

        Reviewed by John.

        - fixed 3098350 -- opt. params to date methods are ignored (can't set end date in Exchange/Outlook web cal.)

        * kjs/date_object.cpp: (DateProtoFuncImp::call): Added code to handle the optional parameters.
        Strangely, the table of functions already had the right number of parameters listed, but the
        code to look at the parameter values was missing.

=== Safari-94 ===

2003-08-17  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - fixed 3247528 -- encodeURI missing from JavaScriptCore (needed by Crystal Reports)
        - fixed 3381297 -- escape method does not escape the null character
        - fixed 3381299 -- escape method produces incorrect escape sequences ala WinIE, rather than correct ala Gecko
        - fixed 3381303 -- unescape method treats escape sequences as Latin-1 ala WinIE rather than as UTF-8 ala Gecko
        - fixed 3381304 -- unescape method garbles strings with bad escape sequences in them

        * kjs/function.h: Added constants for decodeURI, decodeURIComponent, encodeURI, and
        encodeURIComponent.
        * kjs/function.cpp:
        (encode): Added. New helper function for escape, encodeURI, and encodeURIComponent.
        (decode): Added. New helper function for unescape, decodeURI, and decodeURIComponent.
        (GlobalFuncImp::call): Added decodeURI, decodeURIComponent, encodeURI, and encodeURIComponent 
        implementations. Changed escape and unescape to use new helper functions, which fixes